Fix/dont click (#64)
* story section image flip fix

* ghost floats out of screen if points reach 15

* add last headshots

* fix multiple points on header click

* dont click working over socket and upping points correctly

* change dont section back to hover

* fix url

--- a/src/components/header-footer/Header.css
+++ b/src/components/header-footer/Header.css
@@ -69,8 +69,8 @@
   color: #f97c00;
 }
 
-.specialSubLink:hover {
-  color: #ffec5f;
+.noClicky, .noClicky:hover {
+  text-shadow: 0 0 .5em #0bd212e4;
 }
 
 .inputBlink {
